# swagger.json
@@ -1240,6 +1240,16 @@
               }
             ],
             "nullable": true
+          },
+          "startDateTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The start date and time of the duty slot"
+          },
+          "endDateTime": {
+            "type": "string",
+            "format": "date-time",
+            "description": "The end date and time of the duty slot"
           }
         }
       },
